--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,16 +1,13 @@
-# Uncomment the following line to enable deep sleep
-# CONFIG_ZMK_SLEEP=y
+# Enable Sleep
+CONFIG_ZMK_SLEEP=y
+# Idle Sleep 30 sec
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+# Deep Sleep 10 min
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=600000
 
-# Uncomment the following line to increase the keyboard's wireless range
+# Bluetooth
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable eager debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
-CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
-
-# Enable ZMK Studio for Realtime Keymap Updates
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
-
-# Uncomment the following line to enable USB Logging (this increases power usage by a significant amount, turn it off when not in use)
-# CONFIG_ZMK_USB_LOGGING=y
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
